--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "dependencies": {
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
@@ -23,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "pre-commit": "^1.2.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
