--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "lint"
   ],
   "dependencies": {
+    "axios": "^1.9.0",
+    "handlebars": "^4.7.8",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "zustand": "^5.0.5"
@@ -22,6 +25,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
