--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   ],
   "dependencies": {
     "axios": "^1.9.0",
+    "country-list-with-dial-code-and-flag": "^5.1.0",
     "handlebars": "^4.7.8",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
